src/tests/InvalidTests/TestRefresh1.agl
view : View with {
    Ox = -450;
    Oy = 0;
    width = 401;
    height = 401;
    title = "Illustrating a moving pacman";
    background = "alice blue";
}

refresh view; # funciona

a : Integer = 2;

refresh a; # Error: invalid type in refresh command (must be a view type!)
